# sixaxis

./: CMakeLists.txt  README.md  sixaxis-helper.sh  sixaxis@.service.in
debian/: postinst  postrm
